--- a/CSS/style.css
+++ b/CSS/style.css
@@ -250,12 +250,33 @@ button:focus {
 
 .skills__tools {
     padding: 1rem;
-    background-color: var(--color-primary);
-    filter: brightness(150%);
 }
 
 .skills__etc {
     padding: 1rem;
     background-color: var(--color-primary);
-    filter: brightness(190%);
+    filter: brightness(170%);
+}
+
+.bar {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    gap: 0.5rem;
+}
+
+.bar__metadata {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bar__bg {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-primary-variant);
+}
+
+.bar__value {
+    height: 3px;
+    background-color: var(--color-accent);
 }
