--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,7 +59,7 @@ button:focus {
     text-align: center;
 }
 
-.max-containter {
+.max-container {
     max-width: var(--size-max-width);
     margin: auto;
 }
@@ -84,6 +84,7 @@ button:focus {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    z-index: 1;
 }
 
 .header__logo {
@@ -279,4 +280,53 @@ button:focus {
 .bar__value {
     height: 3px;
     background-color: var(--color-accent);
+}
+
+#work {
+    background-color: var(--color-primary);
+    color: var(--color-text);
+}
+
+.categories {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    gap: 1rem;
+}
+
+.category {
+    color: var(--color-text);
+    background-color: transparent;
+    border: 1px solid var(--color-accent);
+    border-radius: 5px;
+    padding: 0.6rem 3rem;
+    cursor: pointer;
+    position: relative;
+}
+
+.category--selected {
+    background-color: var(--color-accent);
+    color: black;
+}
+
+.category__count {
+    opacity: 0;
+    position: absolute;
+    top: -20px;
+    right: 15px;
+    line-height: 28px;
+    width: 28px;
+    height: 28px;
+    background-color: var(--color-accent-variant);
+    color: var(--color-text);
+    border-radius: 100%;
+    transition: all 250ms ease-in;
+    /* 화면을 줄여도 텍스트가 줄바꿈되지 않고 그대로 사이즈 유지, 줄이게 되면 정렬이 변함 */
+    white-space: nowrap;
+}
+
+.category--selected .category__count,
+.category:hover .category__count{
+    opacity: 1;
+    top: 0;
 }
