--- a/CSS/style.css
+++ b/CSS/style.css
@@ -380,3 +380,37 @@ button:focus {
     height: 3px;
     background-color: var(--color-accent);
 }
+
+.testimonials {
+    margin: 3rem;
+}
+
+.testimonial:nth-child(even) .testimonial__img {
+    order: 1;
+}
+
+.testimonial {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+}
+
+.testimonial__img {
+    border-radius: 100%;
+    width: 150px;
+    height: 150px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.tesimonial__bubble {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.testimonial__bubble__name {
+    color: var(--color-accent);
+    filter: brightness(70%);
+    font-weight: bold;
+}
