--- a/CSS/style.css
+++ b/CSS/style.css
@@ -282,6 +282,8 @@ button:focus {
     background-color: var(--color-accent);
 }
 
+/* Work */
+
 #work {
     background-color: var(--color-primary);
     color: var(--color-text);
@@ -381,6 +383,8 @@ button:focus {
     background-color: var(--color-accent);
 }
 
+/* Testimonials */
+
 .testimonials {
     margin: 3rem;
 }
@@ -413,4 +417,40 @@ button:focus {
     color: var(--color-accent);
     filter: brightness(70%);
     font-weight: bold;
+}
+
+/* Arrow up */
+.arrow-up {
+    position: fixed;
+    bottom: 3rem;
+    right: 3rem;
+    font-size: 2rem;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--color-primary);
+    border-radius: 100%;
+    text-align: center;
+    box-shadow: 3px 3px 0px 0px var(--color-accent);
+}
+
+/* Footer */
+#contact {
+    background-color: var(--color-primary);
+    color: var(--color-text);
+}
+
+.contact__links {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+    font-size: 2rem;
+}
+
+.contact__link {
+    transition: color 250ms ease-in;
+}
+
+.contact__link:hover {
+    color: var(--color-accent);
 }
