--- a/CSS/style.css
+++ b/CSS/style.css
@@ -454,3 +454,111 @@ button:focus {
 .contact__link:hover {
     color: var(--color-accent);
 }
+
+@media screen and (max-width: 768px) {
+
+    .section {
+        padding: 2rem;
+    }
+
+    .title {
+        font-size: 1.5rem;
+        margin: 0.8rem 0;
+    }
+
+    .description {
+        font-size: 1rem;
+    }
+
+    .header {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .header__menu {
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem 4rem;
+        gap: 1rem;
+    }
+
+    .header__nav {
+        width: 100%;
+    }
+
+    #home {
+        /* background-color: #ff6aab; */
+        padding: 2rem 3rem;
+        padding-top: 6rem;
+    }
+
+    .home__title {
+        font-size: 1.6rem;
+        margin: 1.5rem 0;
+    }
+
+    .home__description {
+        font-size: 0.9rem;
+    }
+
+    .home__contact {
+        margin: 1.3rem;
+    }
+
+    .majors {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .major {
+        max-width: 25rem;
+        padding: 1.3rem 0.7rem;
+        margin: 0.8rem;
+    }
+
+    .major__icon {
+        font-size: 3rem;
+    }
+
+    .major__title {
+        font-size: 1rem;
+        margin-bottom: 0.4rem;
+    }
+
+    .job {
+        justify-content: center;
+    }
+
+    .skills {
+        grid-template-columns: 1fr;
+    }
+
+    .categories {
+        flex-direction: column;
+    }
+
+    .category {
+        width: 100%;
+    }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr
+        );
+    }
+
+    .testimonial {
+        flex-direction: column;
+    }
+
+    .testimonial:nth-child(even) .testimonial__img {
+        order: 0;
+    }
+
+    .arrow-up {
+        font-size: 1.5rem;
+        width: 2.2rem;
+        height: 2.2rem;
+        bottom: 1.8rem;
+        right: 1.8rem;
+    }
+}
