--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@ button {
 }
 
 button:focus {
-    outline: 1px solid var(--color-accent);
+    outline: 1px solid transparent;
 }
 
 /* Common */
@@ -95,6 +95,15 @@ button:focus {
     box-shadow: var(--color-accent) 0px 0px 0px 2px, var(--color-accent) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
+.header__toggle {
+    display: none;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    color: var(--color-white);
+}
+
 .header__logo {
     display: flex;
     align-items: center;
@@ -116,7 +125,9 @@ button:focus {
 }
 
 .header__menu__item {
+    display: block;
     padding: 8px 16px;
+    border-bottom: 1px solid transparent;
 }
 
 .header__menu__item:hover {
@@ -474,7 +485,7 @@ button:focus {
 @media screen and (max-width: 768px) {
 
     .section {
-        padding: 2rem;
+        padding: 6rem 3rem;
     }
 
     .title {
@@ -489,13 +500,24 @@ button:focus {
     .header {
         flex-direction: column;
         align-items: start;
+        padding: 0.5rem;
+        background-color: var(--color-primary);
+    }
+
+    .header__toggle {
+        display: block;
     }
 
     .header__menu {
+        display: none;
         flex-direction: column;
-        align-items: center;
-        padding: 1rem 4rem;
+        text-align: center;
+        margin: 1rem 4rem;
         gap: 1rem;
+    }
+
+    .header__menu.open {
+        display: flex;
     }
 
     .header__nav {
