--- a/CSS/style.css
+++ b/CSS/style.css
@@ -363,6 +363,12 @@ button:focus {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 1rem;
+    transition: all 200ms ease-in;
+}
+
+.projects.anim-out {
+    opacity: 0;
+    transform: scale(0.96) translateY(-10px);
 }
 
 .project{
