--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
@@ -59,6 +63,10 @@ button:focus {
 .section {
     padding: 4rem;
     text-align: center;
+}
+
+.section.active {
+    background-color: #ff817f;
 }
 
 .max-container {
